# termplay

./: .gitignore  .pre-commit-config.yaml  README.md  client.py  pyproject.toml
assets/: canva_bulk.csv
docs/: ARCHITECTURE.md  SPEC.md
docs/plans/: truco.md  uno-rule-variants.md
docs/superpowers/plans/: 2026-06-19-velha-tui.md
docs/superpowers/specs/: 2026-06-19-velha-tui-design.md
scripts/: gen_assets.py
src/py21ssh/: __init__.py  __main__.py  conf.py
src/py21ssh/application/: __init__.py  game_controller.py  interfaces.py  session_manager.py
src/py21ssh/display/: __init__.py  interfaces.py  renderer.py
src/py21ssh/domain/: card.py  deck.py  hand.py  interfaces.py  rules.py
src/py21ssh/transport/: __init__.py  server.py  tcp_adapter.py
src/termplay/: __init__.py  __main__.py
src/termplay/config/: settings.py
src/termplay/engine/: game.py  registry.py  server.py
src/termplay/frontends/: net.py  textual_adapter.py  textual_app.py
termplay/: __main__.py
termplay/config/: settings.py
termplay/engine/: __init__.py  bot_transport.py  discovery.py  game_log.py  interfaces.py  local_transport.py  multiplayer.py  protocol.py  protocol_adapter.py  room.py  server.py  stats.py
termplay/engine/transport/: queued_adapter.py  tcp_adapter.py
termplay/frontends/: __init__.py  net.py  textual_app.py
termplay/frontends/screens/: __init__.py  create_room.py  game.py  game_select.py  home.py  join_room.py  leaderboard.py  mp_game.py  multiplayer_menu.py  settings.py  uno_screen.py  velha_mp_screen.py  velha_screen.py  waiting_room.py
termplay/games/: __init__.py
termplay/games/blackjack/: __init__.py  plugin.py
termplay/games/dominoes/: plugin.py
termplay/games/hangman/: __init__.py  conf.py  controller.py  plugin.py  state.py
termplay/games/tictactoe/: __init__.py  bot.py  controller.py  plugin.py  state.py
termplay/games/truco/: conf.py  plugin.py  ruleset.py
termplay/games/uno/: __init__.py  br_rules.py  broadcaster.py  context.py  controller.py  display.py  effects.py  input_reader.py  plugin.py  (+4 more)
termplay/gateway/: __init__.py  __main__.py  server.py  ws.py
tests/: conftest.py
tests/test_config/: test_settings.py
tests/test_domain/: test_card.py  test_deck.py  test_hand.py  test_rules.py
tests/test_engine/: test_bot_minigame.py  test_game_log.py  test_host_migration.py  test_reconnect.py  test_reconnect_integration.py  test_registry.py  test_room.py  test_spectator.py  test_stats.py
tests/test_frontends/: test_textual_adapter.py
tests/test_games/: test_blackjack_versus.py  test_dominoes.py  test_new_games.py  test_uno_rules.py
tests/test_gateway/: test_relay.py  test_ws.py
tests/test_transport/: test_queued_adapter.py  test_tcp_adapter.py
(+90 files in other folders)
